--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     </head>  what is my favorite action movie. My favorite action movie is anything that has Denzel washington. Jackie chan or Jason statham, to me this are like the icons of action movies i will love to watch them all star in a movie an action movie and i will pay just to see them do that  
     <body> what actors  do i like in action movies     Denzel washington, Jackie chan, jason statham, Keanu         
                   Reeves.
-    	<h1>This is my website!</h1>
-    	<img src="images/Denzel"alt="Denzel">
-    	<a href= second.html"">The second page </a>
-    	<a href="Third html">The third page</a>
+    	<h1>favorite action movie!</h1>
+    	<img src="images/Denzel.jpg">
+    	<a href= "second.html">The second page </a>
+    	<a href="third.html">The third page</a>
     </body>my favorite actor is Denzel Washington, i have always looked up to him ever since my dad and I used to watch his movies, i admire him as a person and an actor.
 </html>
