--- a/third.html
+++ b/third.html
@@ -7,8 +7,8 @@
     </head> john wick is one of my best movies 
     <body>
     	<h1>Third page!</h1>
-    	<img src="images/john wick"alt+"john wick">
-    	<a href= index.html"">The first page </a>
-    	<a href="Third html">The second page</a>
+    	<img src="images/john wick.jpg">
+    	<a href= "index.html">The first page </a>
+    	<a href="second.html">The second page</a>
     </body> I would n't relate to any character because these are action movies well some and this isn’t my area of something 
 </html>
